--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
             <div class="team-grid">
                 <div class="team-member">
-                    <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=400" alt="David Rodriguez - Senior Stylist">
+                    <img src="https://i.postimg.cc/qMDdsCNS/Whats-App-Image-2025-08-11-at-1-08-55-PM-1.jpg" alt="David Rodriguez - Senior Stylist">
                     <h3>Nikita</h3>
                     <div class="role">Head Barber & Manager </div>
                     <p>Born in Moscow, Nikita is also a graffiti artist with a background in engineering. 
@@ -158,7 +158,7 @@
                     <a href="https://www.fresha.com/a/bo-barbershop-dubai-the-bay-gate-al-mustaqbal-street-mt1rzvjm/booking?menu=true&pId=303291&dppub=true&employeeId=2040052" class="btn btn-primary">Book Nikita</a>
                 </div>
                 <div class="team-member">
-                    <img src="https://images.pexels.com/photos/1681010/pexels-photo-1681010.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Anthony Chen - Beard Specialist">
+                    <img src="https://i.postimg.cc/fT8M8rrH/Whats-App-Image-2025-08-11-at-1-00-51-PM.jpg" alt="Anthony Chen - Beard Specialist">
                     <h3>Mihaela</h3>
                     <div class="role">Barber</div>
                     <p>A distinguished makeup and hair designer with a Bachelor of Arts in her field, Mihaela has over 9 years of experience in the hair industry across Italy, the UK, and the UAE. She is a Wahl educator for the Middle East and Africa region, sharing her expertise with aspiring hairstylists. 
@@ -169,7 +169,7 @@
                     <a href="https://www.fresha.com/a/bo-barbershop-dubai-the-bay-gate-al-mustaqbal-street-mt1rzvjm/booking?menu=true&pId=303291&dppub=true&employeeId=2975571" class="btn btn-primary">Book Mihaela</a>
                 </div>
                 <div class="team-member">
-                    <img src="https://images.pexels.com/photos/1043474/pexels-photo-1043474.jpeg?auto=compress&cs=tinysrgb&w=400" alt="James Wilson - Style Consultant">
+                    <img src="https://i.postimg.cc/L8qFN6fX/Whats-App-Image-2025-08-11-at-1-08-55-PM-2.jpg" alt="James Wilson - Style Consultant">
                     <h3>Vergel</h3>
                     <div class="role">Barber</div>
                     <p>Vergel comes from the mountains of Baguio City, also known as "the Summer Capital of the Philippines". He graduated with a Bachelors  in Marketing and moved to Dubai where he discovered his passion for barbering and customer service. 
@@ -180,7 +180,7 @@
                     <a href="https://www.fresha.com/a/bo-barbershop-dubai-the-bay-gate-al-mustaqbal-street-mt1rzvjm/booking?menu=true&pId=303291&dppub=true&employeeId=2040052&cartId=2cce320b-f970-4b7a-87e3-b2ecf7b5fb40" class="btn btn-primary">Book Vergel</a>
                 </div>
                 <div class="team-member">
-                    <img src="https://images.pexels.com/photos/1040881/pexels-photo-1040881.jpeg?auto=compress&cs=tinysrgb&w=400"  alt="Michael Thompson - Junior Barber">
+                    <img src="https://i.postimg.cc/7LV9zS6T/Whats-App-Image-2025-08-11-at-1-08-56-PM.jpg"  alt="Michael Thompson - Junior Barber">
                     <h3>Aykut</h3>
                     <div class="role">Barber</div>
                     <p>Meet Aykut, our skilled barber from Izmir, Turkey, with 17+ years of experience. He's a man of few words who lets his exceptional haircuts and beard trims do the talking.
@@ -191,15 +191,13 @@
                     <a href="https://www.fresha.com/a/bo-barbershop-dubai-the-bay-gate-al-mustaqbal-street-mt1rzvjm/booking?menu=true&pId=303291&dppub=true&employeeId=2733483" class="btn btn-primary">Book Aykut</a>
                 </div>
                 <div class="team-member">
-                    <img src="https://images.pexels.com/photos/1040881/pexels-photo-1040881.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Sarah Johnson - Hair Specialist">
-                    <h3>Sergei</h3>
+                    <img src="https://i.postimg.cc/pLgb7bYB/Whats-App-Image-2025-08-11-at-1-08-55-PM.jpg" alt="Sarah Johnson - Hair Specialist">
+                    <h3>Jorge</h3>
                     <div class="role">Barber</div>
-                    <p>Hailing from Russia, Sergei sees barbering as more than just a craft — to him, it’s an art form. He finds great joy in helping people look their best and seeing their smile after a great cut.
+                    <p>Hailing from the magical city of Porto, Jorge is a barber by trade, driven by his passion for fashion and a stint as a model in his youth. Always on the lookout for the latest trends, he's deeply committed to his craft
 
-<p>Sergei loves to grow himself personally and professionally - he’s currently learning English to connect with more clients and elevate his craft. 
-
-<p>Outside the shop, Sergei loves skateboarding and pretty much anything that gets his heart racing. But most of all he loves moments when he feels like he’s growing — both as a barber and as a person.</p>
-                    <a href="https://www.fresha.com/a/bo-barbershop-dubai-the-bay-gate-al-mustaqbal-street-mt1rzvjm/booking?menu=true&pId=303291&dppub=true&employeeId=4671374" class="btn btn-primary">Book Sergei</a>
+<p>Known for his genuine kindness, friendliness and approachability, Jorge loves to talk about football and is a lifelong supporter of FC Porto. He also enjoys cycling and working out, and finds solace in the beats of house and techno music. Beyond work, he's an avid traveler, with a keen interest in exploring new cultures, gastronomy, and fine wines.</p>
+                    <a href="https://www.fresha.com/a/bo-barbershop-dubai-the-bay-gate-al-mustaqbal-street-mt1rzvjm/booking?menu=true&pId=303291&dppub=true&employeeId=4671374" class="btn btn-primary">Book Jorge</a>
                 </div>
             </div>
         </div>
