--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="https://images.pexels.com/photos/1319460/pexels-photo-1319460.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Professional barber at work in Bob's Barbershop">
+                    <img src="https://i.postimg.cc/9XKsQ0pV/47bb425a-be0d-43ca-b09e-3c99ed8eb7e6.avif" alt="Professional barber at work in Bo Barbershop">
                 </div>
             </div>
         </div>
@@ -192,12 +192,14 @@
                 </div>
                 <div class="team-member">
                     <img src="https://i.postimg.cc/pLgb7bYB/Whats-App-Image-2025-08-11-at-1-08-55-PM.jpg" alt="Sarah Johnson - Hair Specialist">
-                    <h3>Jorge</h3>
+                    <h3>Sergei</h3>
                     <div class="role">Barber</div>
-                    <p>Hailing from the magical city of Porto, Jorge is a barber by trade, driven by his passion for fashion and a stint as a model in his youth. Always on the lookout for the latest trends, he's deeply committed to his craft
+                    <p>Hailing from Russia, Sergei sees barbering as more than just a craft — to him, it’s an art form. He finds great joy in helping people look their best and seeing their smile after a great cut.
 
-<p>Known for his genuine kindness, friendliness and approachability, Jorge loves to talk about football and is a lifelong supporter of FC Porto. He also enjoys cycling and working out, and finds solace in the beats of house and techno music. Beyond work, he's an avid traveler, with a keen interest in exploring new cultures, gastronomy, and fine wines.</p>
-                    <a href="https://www.fresha.com/a/bo-barbershop-dubai-the-bay-gate-al-mustaqbal-street-mt1rzvjm/booking?menu=true&pId=303291&dppub=true&employeeId=4671374" class="btn btn-primary">Book Jorge</a>
+<p>Sergei loves to grow himself personally and professionally - he’s currently learning English to connect with more clients and elevate his craft. 
+
+<p>Outside the shop, Sergei loves skateboarding and pretty much anything that gets his heart racing. But most of all he loves moments when he feels like he’s growing — both as a barber and as a person.
+                    <a href="https://www.fresha.com/a/bo-barbershop-dubai-the-bay-gate-al-mustaqbal-street-mt1rzvjm/booking?menu=true&pId=303291&dppub=true&employeeId=4671374" class="btn btn-primary">Book Sergei</a>
                 </div>
             </div>
         </div>
@@ -330,4 +332,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
