--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 <p>Sergei loves to grow himself personally and professionally - he’s currently learning English to connect with more clients and elevate his craft. 
 
-<p>Outside the shop, Sergei loves skateboarding and pretty much anything that gets his heart racing. But most of all he loves moments when he feels like he’s growing — both as a barber and as a person.
+<p>Outside the shop, Sergei loves skateboarding and pretty much anything that gets his heart racing. But most of all he loves moments when he feels like he’s growing — both as a barber and as a person.</p>
                     <a href="https://www.fresha.com/a/bo-barbershop-dubai-the-bay-gate-al-mustaqbal-street-mt1rzvjm/booking?menu=true&pId=303291&dppub=true&employeeId=4671374" class="btn btn-primary">Book Sergei</a>
                 </div>
             </div>
@@ -334,3 +334,4 @@
 </body>
 
 </html>
+
