--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h1 class="hero-title">Classic Style.<br><span class="accent-text">Modern Touch.</span></h1>
             <p class="hero-description">Experience the finest in traditional barbershop services with contemporary flair. Where every cut is a masterpiece.</p>
             <div class="hero-buttons">
-                <a href="#services" class="btn btn-primary">Our Services</a>
+                <a href="https://www.fresha.com/a/bo-barbershop-dubai-the-bay-gate-al-mustaqbal-street-mt1rzvjm/booking?menu=true&pId=303291&dppub=true" class="btn btn-primary">Book a Service</a>
             </div>
         </div>
         <div class="scroll-indicator">
@@ -334,4 +334,5 @@
 </body>
 
 </html>
+
 
