--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 <p>Vergel is not only a talented and experienced barber, but also a gifted barista. He learnt from the best baristas in town and mastered the art & science of grinding and brewing that perfect cup of specialty coffee at Bô. 
 
 <p>Outside work "V" enjoys playing basketball, music, video games and exploring Dubai.</p>
-                    <a href="https://www.fresha.com/a/bo-barbershop-dubai-the-bay-gate-al-mustaqbal-street-mt1rzvjm/booking?menu=true&pId=303291&dppub=true&employeeId=2040052&cartId=2cce320b-f970-4b7a-87e3-b2ecf7b5fb40" class="btn btn-primary">Book Vergel</a>
+                    <a href="https://www.fresha.com/a/bo-barbershop-dubai-the-bay-gate-al-mustaqbal-street-mt1rzvjm/booking?menu=true&pId=303291&dppub=true&employeeId=1235324" class="btn btn-primary">Book Vergel</a>
                 </div>
                 <div class="team-member">
                     <img src="https://i.postimg.cc/7LV9zS6T/Whats-App-Image-2025-08-11-at-1-08-56-PM.jpg"  alt="Michael Thompson - Junior Barber">
@@ -334,5 +334,6 @@
 </body>
 
 </html>
+
 
 
